tests/ui/higher-ranked/higher-ranked-lifetime-error.stderr
error[E0308]: mismatched types
  --> $DIR/higher-ranked-lifetime-error.rs:12:5
   |
LL |     assert_all::<_, &String>(id);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
   |
   = note: expected reference `&String`
              found reference `&String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
